--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,17 @@ a {
 ul {
   list-style-type: none;
 }
+
+.header {
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding:8px;
+}
+
+.right,
+.left,
+ul {
+  display:flex;
+  gap:16px;
+}
