--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,19 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.title {
+  text-align:center;
+  margin-bottom:32px;
+}
+
+.items {
+  display:flex;
+  gap:52px;
+  justify-content:center;
+}
+
+.berry {
+  text-align:center;
+  max-width: 200px;
+}
