--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,42 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+body {
+  display:flex;
+  flex-direction:column;
+  justify-content: space-between;
+}
+
+a {
+  text-decoration: none;
+  color:rgb(48, 47, 47);
+}
+
+.header,
+.footer {
+  display:flex;
+  justify-content:space-between;
+  padding: 5px;
+}
+
+
+.footer {
+  background-color: rgba(159, 158, 158, 0.5);
+}
+
+.left-links,
+.right-links {
+  display:flex;
+  list-style-type:none;
+  gap:7px;
+  margin:0px;
+  padding:0px;
+}
+
+.content {
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+}
